Updated so the camera relink when disconnected
Made it so the camera restart if the loop stops or the camera is unplugged. We also added the ability to remember what cameras have been previously connected so it does not try to start a new camera loop.

--- a/2020 Vision/Config/cam1.ini
+++ b/2020 Vision/Config/cam1.ini
@@ -1,8 +1,11 @@
 [cam1]
-Color Range = "@R\0CÌÀ\00\00\00@^\0CÌÀ\00\00\00@EQ²à\00\00\00@hE,è\00\00\00@UŠËöÀ@oà\00\00\00\00\00"
-Camera = "\00\00\00\01"
-Robot Calibration = "@D\00\00\00\00\00\00@7\00\00\00\00\00\00?ø\00\00\00\00\00\00?ð\00\00\00\00\00\00"
-Dilate = "\19"
+Color Range = "@R\00\00\00\00\00\00@^\0CÌÀ\00\00\00\00\00\00\00\00\00\00\00@o}¯Î¦á@_@\00\00\00\00\00@oà\00\00\00\00\00"
+Camera = "\00\00\00\00"
+Robot Calibration = "@D\00\00\00\00\00\00@>\00\00\00\00\00\00?ø\00\00\00\00\00\00?ð\00\00\00\00\00\00"
+Dilate = "\01"
 Brightness = "\00\00\00\0A"
 Camera Exposure = "\00\00\002"
 White Balance = "\00\06"
+Size Limit % = "?„záG®\14{"
+Score Threshold % = "@T\00\00\00\00\00\00"
+Height to center of target from floor (hp (in)) = "@Z\00\00\00\00\00\00"
