--- a/2020 Vision/Config/cam0.ini
+++ b/2020 Vision/Config/cam0.ini
@@ -8,3 +8,4 @@ White Balance = "\00\00"
 Main = "\00\00\00\00"
 Blue Color Range = "@^\14ˇ@\00\00\00@fè\19‡\00\00\00@JÄ\00\00\00\00\00@o‡\00\00\00\00\00@Qhı¿\00\00\00@o‡\00\00\00\00\00"
 Red Color Range = "@l®\00\00\00\00\00@6@\00\00\00\00\00@W”3@\00\00\00@o‡\00\00\00\00\00@YúÃ¿\00\00\00@o‡\00\00\00\00\00"
+Ball DIameter (in) = "@$\00\00\00\00\00\00"
