--- a/2020 Vision/Config/cam2.ini
+++ b/2020 Vision/Config/cam2.ini
@@ -7,3 +7,4 @@ White Balance = "\00\00"
 Camera = "\00\00\00\01"
 Blue Color Range = "@_®k¿\00\00\00@e‘5‡\00\00\00@JyCÄ\00\00\00@o‡\00\00\00\00\00@SπC@\00\00\00@o‡\00\00\00\00\00"
 Red Color Range = "@l©$†\00\00\00@6I%\00\00\00\00@Vk‚¿\00\00\00@o‡\00\00\00\00\00@S‘\1D@\00\00\00@o‡\00\00\00\00\00"
+Ball DIameter (in) = "@$\00\00\00\00\00\00"
