--- a/2020 Vision/Config/cam3.ini
+++ b/2020 Vision/Config/cam3.ini
@@ -7,3 +7,4 @@ White Balance = "\00\00"
 Camera = "\00\00\00\01"
 Blue Color Range = "@_Öf€\00\00\00@eë3@\00\00\00@K¦f€\00\00\00@oà\00\00\00\00\00@R™™€\00\00\00@oà\00\00\00\00\00"
 Red Color Range = "@ljª \00\00\00@4UU\00\00\00\00@UvÛ€\00\00\00@oà\00\00\00\00\00@XjªÀ\00\00\00@oà\00\00\00\00\00"
+Ball DIameter (in) = "@$\00\00\00\00\00\00"
