Updated the software
Made the camera setting all happen in the camera loop.
Added the ability to adjust contrast and sharpness.

--- a/2020 Vision/Config/cam0.ini
+++ b/2020 Vision/Config/cam0.ini
@@ -9,3 +9,9 @@ Main = "\00\00\00\00"
 Blue Color Range = "@^\14ˇ@\00\00\00@fè\19‡\00\00\00@JÄ\00\00\00\00\00@o‡\00\00\00\00\00@Qhı¿\00\00\00@o‡\00\00\00\00\00"
 Red Color Range = "@l®\00\00\00\00\00@6@\00\00\00\00\00@W”3@\00\00\00@o‡\00\00\00\00\00@YúÃ¿\00\00\00@o‡\00\00\00\00\00"
 Ball DIameter (in) = "@$\00\00\00\00\00\00"
+Video Mode = "\00\00"
+Contrast = "\00\00\002"
+Exposure = "\00\00\00\03"
+VideoMode = "\00\02"
+Gain = "\00\00\000"
+Sharpness = "\00\00\00$"
