--- a/2020 Vision/Config/cam1.ini
+++ b/2020 Vision/Config/cam1.ini
@@ -1,11 +1,14 @@
 [cam1]
-Color Range = "@R\00\00\00\00\00\00@^\0CÌÀ\00\00\00\00\00\00\00\00\00\00\00@o}¯Î¦á@_@\00\00\00\00\00@oà\00\00\00\00\00"
-Camera = "\00\00\00\00"
-Robot Calibration = "@D\00\00\00\00\00\00@>\00\00\00\00\00\00?ø\00\00\00\00\00\00?ğ\00\00\00\00\00\00"
-Dilate = "\01"
-Brightness = "\00\00\00\0A"
-Camera Exposure = "\00\00\002"
-White Balance = "\00\06"
-Size Limit % = "?„záG®\14{"
-Score Threshold % = "@T\00\00\00\00\00\00"
-Height to center of target from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+Blue Color Range = "@`:Z`\00\00\00@f:Z`\00\00\00@@Pû\18\00\00\00@VW‚t\00\00\00@@åÈ{_L@b4Jt\00\00\00"
+Red Color Range = "@kfFŒ\00\00\00@)\16Û@\00\00\00@;¦á(\18°@d€ô\00\00\00@VF+.CÚü@j\13\13x\00\00\00"
+Ball DIameter (in) = "@$\00\00\00\00\00\00"
+Contrast = "\00\00\00="
+FOV = "@f€\00\00\00\00\00"
+Exposure = "\00\00\00\03"
+VideoMode = "\00\02"
+Gain = "\00\00\002"
+Sharpness = "\00\00\004"
+Brightness = "\00\00\00H"
+White Balance = "\00\00"
+Main = "\00\00\00\00"
+Score Threshold % = "@V€\00\00\00\00\00"
