--- a/2020 Vision/Config/Vision Setup.ini
+++ b/2020 Vision/Config/Vision Setup.ini
@@ -1,4 +1,4 @@
 [Setup]
 Server IP Address = "\00\00\00\15roboRIO-141-FRC.local"
 Compression = "\00\00\00È"
-NT Table Update Time (ms) = "\00\00\00\05"
+NT Table Update Time (ms) = "\00\00\00\0A"
