Updated the Vision control document
Updated the vision control document to include all of the changes that we made this year. I also updates the wish list items and know bug items that we need to address moving forward.

--- a/2020 Vision/Config/cam0.ini
+++ b/2020 Vision/Config/cam0.ini
@@ -15,3 +15,6 @@ Exposure = "\00\00\00\03"
 VideoMode = "\00\02"
 Gain = "\00\00\000"
 Sharpness = "\00\00\00$"
+Gamma = "\00\00\002"
+Hue = "\00\00\002"
+Saturation = "\00\00\002"
