--- a/2020 Vision/Config/cam4.ini
+++ b/2020 Vision/Config/cam4.ini
@@ -1,16 +1,55 @@
 [cam4]
-Brightness = "\00\00\00G"
+Brightness = "\00\00\00\15"
 Camera Exposure = "\00\00\00\00\00\00\002"
 White Balance = "\00\00"
 Video Mode = "\00\02"
-Blue Color Range = "@^3Ï@\00\00\00@e\19ç \00\00\00@C–Í \00\00\00@o‘(\18\00\00\00@H”\0CV\\‡´@j/<ð\00\00\00"
-Red Color Range = "@l\11Ý²\00\00\00@5Ñ\12p\00\00\00@5À\00\00\00\00\00@oà\00\00\00\00\00@[¦á(\18¬@oB\00\00\00\00\00"
+Blue Color Range = "@[²I@\00\00\00@cÙ$ \00\00\00\00\00\00\00\00\00\00\00@k«m°\00\00\00@QRI@\00\00\00@oà\00\00\00\00\00"
+Red Color Range = "@l—”@\00\00\00@5¼¢\00\00\00\00@N¹\0Fkó©¤@o¼¡ \00\00\00@P×€\00\00\00@oà\00\00\00\00\00"
 Main = "\00\00\00\00"
 Ball DIameter (in) = "@$\00\00\00\00\00\00"
-Contrast = "\00\00\00<"
-Exposure = "\00\00\00\03"
+Contrast = "\00\00\00&"
+Exposure = "\00\00\00\04"
 VideoMode = "\00\02"
-Gain = "\00\00\001"
-Sharpness = "\00\00\003"
+Gain = "\00\00\00!"
+Sharpness = "\00\00\00\07"
 FOV = "@f€\00\00\00\00\00"
 Score Threshold % = "@V€\00\00\00\00\00"
+Gamma = "\00\00\00\14"
+Hue = "\00\00\002"
+Saturation = "\00\00\002"
+Color Range = "@5žå€\00\00\00@Qg¹`\00\00\00@Pš{€\00\00\00@oà\00\00\00\00\00@X\00\00\00\00\00\00@oà\00\00\00\00\00"
+Robot Calibration = "@:³33333@5™™™™™š?îE¡ÊÀƒ\12@%ŒÌÌÌÌÍ"
+Dilate = "\00"
+Size Limit % = "?”záG®\14{"
+Height to center of target 
+from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+Height to center of target 
+from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+Height to center of target 
+from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+Height to center of target 
+from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+Height to center of target 
+from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+Height to center of target 
+from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+Height to center of target 
+from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+Height to center of target 
+from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+Height to center of target 
+from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+Height to center of target 
+from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+Height to center of target 
+from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+Height to center of target 
+from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+Height to center of target 
+from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+Height to center of target 
+from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+Height to center of target 
+from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+Height to center of target 
+ from floor (hp (in)) = "@Z\00\00\00\00\00\00"
