--- a/2020 Vision/Config/cam5.ini
+++ b/2020 Vision/Config/cam5.ini
@@ -1,25 +1,19 @@
-[cam1]
-Blue Color Range = "@] ˙@\00\00\00@fu\13†\00\00\00@LP≤\00\00\00\00@o‡\00\00\00\00\00@A\05êÄ\00\00\00@o‡\00\00\00\00\00"
-Red Color Range = "@kÃÃ¿\00\00\00@.ÃÃ\00\00\00\00@Bo	@≈e»@i∫¸Íhﬁ\12\00\00\00\00\00\00\00\00@o‡\00\00\00\00\00"
-Ball DIameter (in) = "@$\00\00\00\00\00\00"
-Contrast = "\00\00\00\02"
-FOV = "@fÄ\00\00\00\00\00"
-Exposure = "\00\00\00\02"
-VideoMode = "\00\00"
-Gain = "\00\00\00\04"
-Sharpness = "\00\00\00\02"
+[cam5]
 Brightness = "\00\00\00\01"
-White Balance = "\00\01"
-Main = "\00\00\00\00"
-Score Threshold % = "@VÄ\00\00\00\00\00"
-Gamma = "\00\00\00""
-Hue = "\00\00\005"
-Saturation = "\00\00\005"
-Color Range = "@U33@\00\00\00@`ôô†\00\00\00@Z§I¨\00\00\00@h\14A™\00\00\00@SÛ3@\00\00\00@_Û3@\00\00\00"
-Robot Calibration = "@DÄ\00\00\00\00\00@N\00\00\00\00\00\00@\11¨\081&Èy@\1F\00\00\00\00\00\00"
+Exposure = "\00\00\00\02"
+White Balance = "\00\00"
+VideoMode = "\00\00"
+Contrast = "\00\00\00\0F"
+Gain = "\00\00\00\01"
+Sharpness = "\00\00\00\01"
+Gamma = "\00\00\00\01"
+Hue = "\00\00\002"
+Saturation = "\00\00\002"
+Color Range = "@5ûÂÄ\00\00\00@b\00\00\00\00\00\00@Pö{Ä\00\00\00@o‡\00\00\00\00\00@X\00\00\00\00\00\00@k¶ç·(\18≠"
+Robot Calibration = "@:≥33333@5ôôôôôö?ÓE° ¿É\12@%åÃÃÃÃÕ"
 Dilate = "\01"
-Size Limit % = "?Ñz·GÆ\14{"
-Height to center of target from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+Size Limit % = "?îz·GÆ\14{"
+Score Threshold % = "@QÄ\00\00\00\00\00"
 Height to center of target 
 from floor (hp (in)) = "@Z\00\00\00\00\00\00"
 Height to center of target 
@@ -100,28 +94,11 @@ Height to center of target
 from floor (hp (in)) = "@Z\00\00\00\00\00\00"
 Height to center of target 
 from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+Blue Color Range = "@5ûÂÄ\00\00\00@Qgπ`\00\00\00@Pö{Ä\00\00\00@o‡\00\00\00\00\00@X\00\00\00\00\00\00@o‡\00\00\00\00\00"
+Red Color Range = "@5ûÂÄ\00\00\00@Qgπ`\00\00\00@Pö{Ä\00\00\00@o‡\00\00\00\00\00@X\00\00\00\00\00\00@o‡\00\00\00\00\00"
+Main = "\00\00\00\00"
+Ball Diameter (in) = "@$\00\00\00\00\00\00"
+FOV = "@^\00\00\00\00\00\00"
 Height to center of target 
 from floor (hp (in)) = "@Z\00\00\00\00\00\00"
 Height to center of target 
