Made updates for NT tables
- Added the NT table send for distance and angle
- Fixed the distance calculation
- We still need to make it so the camera starts up to 30 FPS

--- a/2020 Vision/Config/cam1.ini
+++ b/2020 Vision/Config/cam1.ini
@@ -4,17 +4,17 @@ Red Color Range = "@kÌÌÀ\00\00\00@.ÌÌ\00\00\00\00@Bo	@ÅeÈ@iºüêhÞ\12\00\00\00\00\
 Ball DIameter (in) = "@$\00\00\00\00\00\00"
 Contrast = "\00\00\00\1E"
 FOV = "@f€\00\00\00\00\00"
-Exposure = "\00\00\00\02"
-VideoMode = "\00\10"
+Exposure = "\00\00\00\0E"
+VideoMode = "\00\14"
 Gain = "\00\00\001"
 Sharpness = "\00\00\00\1A"
 Brightness = "\00\00\00\0E"
 White Balance = "\00\00"
 Main = "\00\00\00\00"
 Score Threshold % = "@V€\00\00\00\00\00"
-Gamma = "\00\00\001"
-Hue = "\00\00\00/"
-Saturation = "\00\00\002"
+Gamma = "\00\00\00\1D"
+Hue = "\00\00\00\1B"
+Saturation = "\00\00\00\19"
 Color Range = "@U33@\00\00\00@`™™ \00\00\00@Z¤I¬\00\00\00@h\14Aª\00\00\00@Só3@\00\00\00@_ó3@\00\00\00"
 Robot Calibration = "@D€\00\00\00\00\00@N\00\00\00\00\00\00@\11¬\081&éy@\1F\00\00\00\00\00\00"
 Dilate = "\01"
@@ -154,10 +154,10 @@ Height to center of target
 from floor (hp (in)) = "@Z\00\00\00\00\00\00"
 Height to center of target 
 from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Target Size = "@\10\00\00\00\00\00\00"
+Target Size = "@\1A\00\00\00\00\00\00"
 Rectangle Descriptor = "@D\00\00\00\00\00\00@i\00\00\00\00\00\00@D\00\00\00\00\00\00@i\00\00\00\00\00\00"
 Match Options = "\01\01\00\00\00\00\00"
-Max Rectangle Size (pix) = "@Y\00\00\00\00\00\00"
-Min Rectangle Size (pix) = "@D\00\00\00\00\00\00"
+Max Rectangle Size (pix) = "@rÀ\00\00\00\00\00"
+Min Rectangle Size (pix) = "@Y\00\00\00\00\00\00"
 upper limit = "?¦ff"
 lower limit = "?@\00\00"
