--- a/2020 Vision/Config/cam1.ini
+++ b/2020 Vision/Config/cam1.ini
@@ -2,13 +2,13 @@
 Blue Color Range = "@] ˙@\00\00\00@fu\13†\00\00\00@LP≤\00\00\00\00@o‡\00\00\00\00\00@A\05êÄ\00\00\00@o‡\00\00\00\00\00"
 Red Color Range = "@kÃÃ¿\00\00\00@.ÃÃ\00\00\00\00@Bo	@≈e»@i∫¸Íhﬁ\12\00\00\00\00\00\00\00\00@o‡\00\00\00\00\00"
 Ball DIameter (in) = "@$\00\00\00\00\00\00"
-Contrast = "\00\00\00\1E"
+Contrast = "\00\00\00\0D"
 FOV = "@fÄ\00\00\00\00\00"
-Exposure = "\00\00\00\0E"
+Exposure = "\00\00\00\03"
 VideoMode = "\00\14"
 Gain = "\00\00\001"
 Sharpness = "\00\00\00\1A"
-Brightness = "\00\00\00\0E"
+Brightness = "\00\00\00	"
 White Balance = "\00\00"
 Main = "\00\00\00\00"
 Score Threshold % = "@VÄ\00\00\00\00\00"
@@ -163,3 +163,5 @@ upper limit = "?¶ff"
 lower limit = "?@\00\00"
 Max Rect Size (pix) = "@r¿\00\00\00\00\00"
 Min Rect Size (pix) = "@b¿\00\00\00\00\00"
+Min Score = "@@\00\00\00\00\00"
+Find Tag Number = "\01"
