Added the FIRST AprilTag code
- Added the first AprilTag code.
- Built a TCP pipe to send data to the roboRIO

--- a/2020 Vision/Config/cam3.ini
+++ b/2020 Vision/Config/cam3.ini
@@ -1,7 +1,7 @@
 [cam3]
 Color Range = "@bfjè\00\00\00@Wù°\00\00\00@W¹™€\00\00\00@oà\00\00\00\00\00@[À\00\00\00\00\00@oà\00\00\00\00\00"
 Main = "\00\00\00\00"
-Brightness = "\00\00\005"
+Brightness = "\00\00\00K"
 Camera Exposure = "\00\00\002"
 White Balance = "\00\00"
 Camera = "\00\00\00\01"
@@ -10,8 +10,8 @@ Red Color Range = "@ljª \00\00\00@4UU\00\00\00\00@UvÛ€\00\00\00@oà\00\00\00\00\0
 Ball DIameter (in) = "@$\00\00\00\00\00\00"
 FOV = "@f€\00\00\00\00\00"
 Score Threshold % = "@V€\00\00\00\00\00"
-Exposure = "\00\00\00""
-VideoMode = "\00\0C"
+Exposure = "\00\00\006"
+VideoMode = "\00\08"
 Contrast = "\00\00\00\01"
 Gain = "\00\00\00\01"
 Sharpness = "\00\00\00\01"
@@ -23,5 +23,5 @@ Max Rect Size (pix) = "@@\00\00\00\00\00"
 Min Rect Size (pix) = "@I\00\00\00\00\00\00"
 upper limit = "@\00\00\00"
 lower limit = ">LÌÍ"
-Min Score = "@‰\00\00\00\00\00\00"
+Min Score = "@i\00\00\00\00\00\00"
 Find Tag Number = "\01"
