Added a TCP pipe to talk to the roboRIO
- Added a method to get the needed data to the roboRIO
- Worked on the targeting and calibration

--- a/2020 Vision/Config/cam1.ini
+++ b/2020 Vision/Config/cam1.ini
@@ -1,9 +1,9 @@
 [cam1]
 Blue Color Range = "@] ˙@\00\00\00@fu\13†\00\00\00@LP≤\00\00\00\00@o‡\00\00\00\00\00@A\05êÄ\00\00\00@o‡\00\00\00\00\00"
 Red Color Range = "@kÃÃ¿\00\00\00@.ÃÃ\00\00\00\00@Bo	@≈e»@i∫¸Íhﬁ\12\00\00\00\00\00\00\00\00@o‡\00\00\00\00\00"
-Ball DIameter (in) = "@$\00\00\00\00\00\00"
+Ball DIameter (in) = "@0\00\00\00\00\00\00"
 Contrast = "\00\00\00\0D"
-FOV = "@fÄ\00\00\00\00\00"
+FOV = "@Q \00\00\00\00\00"
 Exposure = "\00\00\00\03"
 VideoMode = "\00\14"
 Gain = "\00\00\001"
@@ -165,3 +165,4 @@ Max Rect Size (pix) = "@r¿\00\00\00\00\00"
 Min Rect Size (pix) = "@b¿\00\00\00\00\00"
 Min Score = "@@\00\00\00\00\00"
 Find Tag Number = "\01"
+Algae Color Range = "@Wy4 \00\00\00@aºö\10\00\00\00@\14\15ÅÄ\00\00\00@Z©"H\00\00\00@-eÚ\00\00\00\00@o÷_ \00\00\00"
