--- a/2020 Vision/Config/cam3.ini
+++ b/2020 Vision/Config/cam3.ini
@@ -8,7 +8,7 @@ Camera = "\00\00\00\01"
 Blue Color Range = "@_Öf€\00\00\00@eë3@\00\00\00@K¦f€\00\00\00@oà\00\00\00\00\00@R™™€\00\00\00@oà\00\00\00\00\00"
 Red Color Range = "@ljª \00\00\00@4UU\00\00\00\00@UvÛ€\00\00\00@oà\00\00\00\00\00@XjªÀ\00\00\00@oà\00\00\00\00\00"
 Ball DIameter (in) = "@$\00\00\00\00\00\00"
-FOV = "@f€\00\00\00\00\00"
+FOV = "@V€\00\00\00\00\00"
 Score Threshold % = "@V€\00\00\00\00\00"
 Exposure = "\00\00\006"
 VideoMode = "\00\08"
@@ -25,3 +25,5 @@ upper limit = "@\00\00\00"
 lower limit = ">LÌÍ"
 Min Score = "@i\00\00\00\00\00\00"
 Find Tag Number = "\01"
+Robot Calibration Cluster = "@B\00\00\00\00\00\00À.\00\00\00\00\00\00?ð\00\00\00\00\00\00\00\00\00\00\00\00\00\00"
+Interpolation Table = "\00\00\00\02\00\00\00\05@R\00\00\00\00\00\00@S\00\00\00\00\00\00@Y\00\00\00\00\00\00@b \00\00\00\00\00@qÐ\00\00\00\00\00@K€\00\00\00\00\00@N€\00\00\00\00\00@Y€\00\00\00\00\00@n \00\00\00\00\00@Œø\00\00\00\00\00"
