Made it so the user can select camera name after everything is started
- Updated the version to 25.1.28.1
- Added a state machine to the AprilTag target loop
- Added a state machine to the ball target loop
- Fixed the save and open for both loops
- Removed the NT table stuff from everything except the RIO talking vi.

--- a/2020 Vision/Config/cam4.ini
+++ b/2020 Vision/Config/cam4.ini
@@ -52,4 +52,5 @@ from floor (hp (in)) = "@Z\00\00\00\00\00\00"
 Height to center of target 
 from floor (hp (in)) = "@Z\00\00\00\00\00\00"
 Height to center of target 
- from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+from floor (hp (in)) = "@Z\00\00\00\00\00\00"
+Algae Color Range = "@Wy4 \00\00\00@aºö\10\00\00\00@\14\15ÅÄ\00\00\00@Z©"H\00\00\00@-eÚ\00\00\00\00@o÷_ \00\00\00"
