Updated the code
- Fixed a bug with the ball loop that causes an error when starting

--- a/2020 Vision/Config/cam4.ini
+++ b/2020 Vision/Config/cam4.ini
@@ -1,5 +1,5 @@
 [cam4]
-Brightness = "\00\00\00\15"
+Brightness = "\00\00\007"
 Camera Exposure = "\00\00\00\00\00\00\002"
 White Balance = "\00\00"
 Video Mode = "\00\02"
@@ -8,7 +8,7 @@ Red Color Range = "@lóî@\00\00\00@5º¢\00\00\00\00@Nπ\0FkÛ©§@oº°†\00\00\00@Pê◊Ä\0
 Main = "\00\00\00\00"
 Ball DIameter (in) = "@$\00\00\00\00\00\00"
 Contrast = "\00\00\00&"
-Exposure = "\00\00\00\04"
+Exposure = "\00\00\001"
 VideoMode = "\00\02"
 Gain = "\00\00\00!"
 Sharpness = "\00\00\00\07"
