Made a few Changes
Added the code to the new computer.

--- a/2020 Vision/Config/cam2.ini
+++ b/2020 Vision/Config/cam2.ini
@@ -1,22 +1,12 @@
 [cam2]
-Color Range = "@l¨\00\00\00\00\00@6@\00\00\00\00\00@Rh\00\00\00\00\00@oà\00\00\00\00\00?ù\00\00\00\00\00\00@n2\00\00\00\00\00"
-Main = "\00\00\00\00"
-Brightness = "\00\00\00\1E"
-Camera Exposure = "\00\00\002"
-White Balance = "\00\00"
-Camera = "\00\00\00\01"
-Blue Color Range = "@_¨kÀ\00\00\00@eÔ5à\00\00\00@JyC€\00\00\00@oà\00\00\00\00\00@S¹C@\00\00\00@oà\00\00\00\00\00"
-Red Color Range = "@l©$ \00\00\00@6I%\00\00\00\00@VkâÀ\00\00\00@oà\00\00\00\00\00@SÔ\1D@\00\00\00@oà\00\00\00\00\00"
-Ball DIameter (in) = "@0\00\00\00\00\00\00"
-Alge Color Range = "@5žå€\00\00\00@Qg¹`\00\00\00@Pš{€\00\00\00@oà\00\00\00\00\00@X\00\00\00\00\00\00@oà\00\00\00\00\00"
-FOV = "@Q \00\00\00\00\00"
-Score Threshold % = "@T\00\00\00\00\00\00"
-Exposure = "\00\00\00\0B"
-VideoMode = "\00\14"
-Contrast = "\00\00\00("
+Brightness = "\00\00\00K"
+Exposure = "\00\00\00!"
+White Balance = "\00\06"
+VideoMode = "\00\02"
+Contrast = "\00\00\002"
 Gain = "\00\00\002"
 Sharpness = "\00\00\002"
 Gamma = "\00\00\002"
 Hue = "\00\00\002"
 Saturation = "\00\00\002"
-Algae Color Range = "@Un4$\00\00\00@bØ<®\00\00\00@Hµó€\00\00\00@oà\00\00\00\00\00@P©É\00\00\00\00@oà\00\00\00\00\00"
+Save = "\00"
