--- a/2020 Vision/Config/cam0.ini
+++ b/2020 Vision/Config/cam0.ini
@@ -1,20 +1,12 @@
 [cam0]
-Camera = "\00\00\00\01"
-output color = "@l¥\00\00\00\00\00@6†\00\00\00\00\00@a ¬|\00\00\00@o‡\00\00\00\00\00@M—>–\00\00\00@f\1B∞L\00\00\00"
-Color Range = "@lë« \00\00\00@5é9\00\00\00\00@X„é@\00\00\00@o‡\00\00\00\00\00@W£é@\00\00\00@o‡\00\00\00\00\00"
-Brightness = "\00\00\00("
-Camera Exposure = "\00\00\002"
-White Balance = "\00\00"
-Main = "\00\00\00\00"
-Blue Color Range = "@^\14ˇ@\00\00\00@fè\19‡\00\00\00@JÄ\00\00\00\00\00@o‡\00\00\00\00\00@Qhı¿\00\00\00@o‡\00\00\00\00\00"
-Red Color Range = "@l®\00\00\00\00\00@6@\00\00\00\00\00@W”3@\00\00\00@o‡\00\00\00\00\00@YúÃ¿\00\00\00@o‡\00\00\00\00\00"
-Ball DIameter (in) = "@$\00\00\00\00\00\00"
-Video Mode = "\00\00"
-Contrast = "\00\00\00	"
-Exposure = "\00\00\00L"
-VideoMode = "\00\07"
-Gain = "\00\00\000"
-Sharpness = "\00\00\00$"
+Brightness = "\00\00\002"
+Exposure = "\00\00\002"
+White Balance = "\00\06"
+VideoMode = "\00\14"
+Contrast = "\00\00\002"
+Gain = "\00\00\002"
+Sharpness = "\00\00\002"
 Gamma = "\00\00\002"
 Hue = "\00\00\002"
 Saturation = "\00\00\002"
+Save = "\00"
