--- a/2020 Vision/Config/cam1.ini
+++ b/2020 Vision/Config/cam1.ini
@@ -1,168 +1,12 @@
 [cam1]
-Blue Color Range = "@] ˙@\00\00\00@fu\13†\00\00\00@LP≤\00\00\00\00@o‡\00\00\00\00\00@A\05êÄ\00\00\00@o‡\00\00\00\00\00"
-Red Color Range = "@kÃÃ¿\00\00\00@.ÃÃ\00\00\00\00@Bo	@≈e»@i∫¸Íhﬁ\12\00\00\00\00\00\00\00\00@o‡\00\00\00\00\00"
-Ball DIameter (in) = "@0\00\00\00\00\00\00"
-Contrast = "\00\00\00\0D"
-FOV = "@Q \00\00\00\00\00"
-Exposure = "\00\00\00\03"
-VideoMode = "\00\14"
-Gain = "\00\00\001"
-Sharpness = "\00\00\00\1A"
-Brightness = "\00\00\00	"
-White Balance = "\00\00"
-Main = "\00\00\00\00"
-Score Threshold % = "@VÄ\00\00\00\00\00"
-Gamma = "\00\00\00\1D"
-Hue = "\00\00\00\1B"
-Saturation = "\00\00\00\19"
-Color Range = "@U33@\00\00\00@`ôô†\00\00\00@Z§I¨\00\00\00@h\14A™\00\00\00@SÛ3@\00\00\00@_Û3@\00\00\00"
-Robot Calibration = "@DÄ\00\00\00\00\00@N\00\00\00\00\00\00@\11¨\081&Èy@\1F\00\00\00\00\00\00"
-Dilate = "\01"
-Size Limit % = "?Ñz·GÆ\14{"
-Height to center of target from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Height to center of target 
-from floor (hp (in)) = "@Z\00\00\00\00\00\00"
-Target Size = "@\1A\00\00\00\00\00\00"
-Rectangle Descriptor = "@D\00\00\00\00\00\00@i\00\00\00\00\00\00@D\00\00\00\00\00\00@i\00\00\00\00\00\00"
-Match Options = "\01\01\00\00\00\00\00"
-Max Rectangle Size (pix) = "@r¿\00\00\00\00\00"
-Min Rectangle Size (pix) = "@Y\00\00\00\00\00\00"
-upper limit = "?¶ff"
-lower limit = "?@\00\00"
-Max Rect Size (pix) = "@r¿\00\00\00\00\00"
-Min Rect Size (pix) = "@b¿\00\00\00\00\00"
-Min Score = "@@\00\00\00\00\00"
-Find Tag Number = "\01"
-Algae Color Range = "@Wy4 \00\00\00@aºö\10\00\00\00@\14\15ÅÄ\00\00\00@Z©"H\00\00\00@-eÚ\00\00\00\00@o÷_ \00\00\00"
+Brightness = "\00\00\00#"
+Exposure = "\00\00\00\0B"
+White Balance = "\00\06"
+VideoMode = "\00\0A"
+Contrast = "\00\00\002"
+Gain = "\00\00\002"
+Sharpness = "\00\00\002"
+Gamma = "\00\00\002"
+Hue = "\00\00\002"
+Saturation = "\00\00\002"
+Save = "\00"
