Working on Pose measurement
- Fixed some of the camera issues.
- Made it so it finds the cameras significantly faster
- Tried to fix the issue of the target loop crashing
- Built a new exe

--- a/2020 Vision/Config/cam1.ini
+++ b/2020 Vision/Config/cam1.ini
@@ -2,7 +2,7 @@
 Brightness = "\00\00\00#"
 Exposure = "\00\00\00\0B"
 White Balance = "\00\06"
-VideoMode = "\00\0A"
+VideoMode = "\00\14"
 Contrast = "\00\00\002"
 Gain = "\00\00\002"
 Sharpness = "\00\00\002"
