Changed the stream to enum and data
- Fixed the ball target code. I was not updating the color range when opened.
- Changed the network stream to enum and double array

--- a/2020 Vision/Config/Ball.ini
+++ b/2020 Vision/Config/Ball.ini
@@ -1,5 +1,5 @@
 [Info]
-Algae Color Range = "@5žå€\00\00\00@Qg¹`\00\00\00@Pš{€\00\00\00@oà\00\00\00\00\00@X\00\00\00\00\00\00@oà\00\00\00\00\00"
+Algae Color Range = "@U“žà\00\00\00@`ÉÏp\00\00\00@B’¯€\00\00\00@oà\00\00\00\00\00@V\01Þ@\00\00\00@oà\00\00\00\00\00"
 Main = "\00\00\00\00"
 Ball Diameter (in) = "@0\00\00\00\00\00\00"
 FOV = "@Q \00\00\00\00\00"
