Updated the TCP data Stream
- Updated the TCP stream on the apriltag and algae to 2D data stream.
- Updated the TCP client to log the data streams if true. This does not log to file yet.

--- a/2020 Vision/Config/cam2.ini
+++ b/2020 Vision/Config/cam2.ini
@@ -1,12 +1,12 @@
 [cam2]
-Brightness = "\00\00\00K"
-Exposure = "\00\00\00!"
+Brightness = "\00\00\004"
+Exposure = "\00\00\00\0C"
 White Balance = "\00\06"
-VideoMode = "\00\14"
-Contrast = "\00\00\002"
+VideoMode = "\00\02"
+Contrast = "\00\00\00\0B"
 Gain = "\00\00\002"
 Sharpness = "\00\00\002"
-Gamma = "\00\00\002"
-Hue = "\00\00\002"
-Saturation = "\00\00\002"
+Gamma = "\00\00\00\08"
+Hue = "\00\00\00&"
+Saturation = "\00\00\00G"
 Save = "\00"
