--- a/2020 Vision/Config/cam4.ini
+++ b/2020 Vision/Config/cam4.ini
@@ -1,5 +1,11 @@
 [cam4]
-Brightness = "\00\00\002"
-Exposure = "\00\00\002"
-VideoMode = "\00\14"
+Brightness = "\00\00\001"
+Exposure = "\00\00\00C"
+VideoMode = "\00\0E"
 White Balance = "\00\06"
+Saturation = "\00\00\00\01"
+Hue = "\00\00\00\01"
+Gamma = "\00\00\00\01"
+Contrast = "\00\00\00\07"
+Sharpness = "\00\00\00\01"
+Gain = "\00\00\00\01"
