--- a/2020 Vision/Config/cam1.ini
+++ b/2020 Vision/Config/cam1.ini
@@ -1,9 +1,9 @@
 [cam1]
-Brightness = "\00\00\00#"
+Brightness = "\00\00\00\1B"
 Exposure = "\00\00\00\0B"
-White Balance = "\00\06"
-VideoMode = "\00\14"
-Contrast = "\00\00\002"
+White Balance = "\00\01"
+VideoMode = "\00\0A"
+Contrast = "\00\00\00\07"
 Gain = "\00\00\002"
 Sharpness = "\00\00\002"
 Gamma = "\00\00\002"
