--- a/2020 Vision/Config/Ball.ini
+++ b/2020 Vision/Config/Ball.ini
@@ -1,7 +1,7 @@
 [Info]
-Algae Color Range = "@H\0As\00\00\00\00@X\059Ä\00\00\00\00\00\00\00\00\00\00\00@kıç\10\00\00\00@D\0F¨Ä\00\00\00@o‡\00\00\00\00\00"
+Algae Color Range = "@[V\05Ä\00\00\00@c´\02¿\00\00\00@C1¬†\00\00\00@`ÙÔ∏\00\00\00\00\00\00\00\00\00\00\00@mÿn \00\00\00"
 Main = "\00\00\00\00"
 Ball Diameter (in) = "@0\00\00\00\00\00\00"
-FOV = "@W\00\00\00\00\00\00"
+FOV = "@T@\00\00\00\00\00"
 Score Threshold % = "@T\00\00\00\00\00\00"
 Camera Name = "\00\00\00\04cam2"
