Chasing down Camera Lag Issue
- Simplified the way we get picture to the target loop.
- Added decimation to the images for AprilTag processing this make the processing faster.
- Added tag pitch measurements to the display
- Made it so the target package does not update while the setting window is open.

--- a/2020 Vision/Config/Airtag.ini
+++ b/2020 Vision/Config/Airtag.ini
@@ -1,5 +1,5 @@
 [Info]
 Main = "\00\00\00\00"
-Robot Calibration Cluster = "@#\00\00\00\00\00\00@\04\00\00\00\00\00\00@:€\00\00\00\00\00@\1A\00\00\00\00\00\00@#€\00\00\00\00\00"
+Robot Calibration Cluster = "@#\00\00\00\00\00\00@\04\00\00\00\00\00\00@@\00\00\00\00\00\00@\1A\00\00\00\00\00\00@#€\00\00\00\00\00"
 FOV = "@Q \00\00\00\00\00"
 Camera Name = "\00\00\00\04cam4"
