--- a/2020 Vision/Config/cam4.ini
+++ b/2020 Vision/Config/cam4.ini
@@ -1,11 +1,11 @@
 [cam4]
-Brightness = "\00\00\001"
-Exposure = "\00\00\00C"
-VideoMode = "\00\0E"
-White Balance = "\00\06"
-Saturation = "\00\00\00\01"
-Hue = "\00\00\00\01"
-Gamma = "\00\00\00\01"
-Contrast = "\00\00\00\07"
-Sharpness = "\00\00\00\01"
-Gain = "\00\00\00\01"
+Brightness = "\00\00\00A"
+Exposure = "\00\00\00d"
+VideoMode = "\00\02"
+White Balance = "\00\00"
+Saturation = "\00\00\000"
+Hue = "\00\00\00/"
+Gamma = "\00\00\000"
+Contrast = "\00\00\00\1D"
+Sharpness = "\00\00\00?"
+Gain = "\00\00\004"
