Fixed the camera lag issue with the ELP camera
- Fixed the camera lag issue with rhe ELP camera.
- Moved the type cast to Greyscale (U8) to the camera loop
- Added an event to turn on the grey scale for what ever loop is running the AirTags

--- a/2020 Vision/Config/Ball.ini
+++ b/2020 Vision/Config/Ball.ini
@@ -1,5 +1,5 @@
 [Info]
-Algae Color Range = "@[V\05€\00\00\00@c«\02À\00\00\00@C1Â \00\00\00@`ôï¸\00\00\00\00\00\00\00\00\00\00\00@mØn \00\00\00"
+Algae Color Range = "@là\00\00\00\00\00@8\00\00\00\00\00\00\00\00\00\00\00\00\00\00@8\00\00\00\00\00\00\00\00\00\00\00\00\00\00@8\00\00\00\00\00\00"
 Main = "\00\00\00\00"
 Ball Diameter (in) = "@0\00\00\00\00\00\00"
 FOV = "@T@\00\00\00\00\00"
