Working on Coral target Package
- Started working on the coral target package

--- a/2020 Vision/Config/Ball.ini
+++ b/2020 Vision/Config/Ball.ini
@@ -1,5 +1,5 @@
 [Info]
-Algae Color Range = "@là\00\00\00\00\00@8\00\00\00\00\00\00\00\00\00\00\00\00\00\00@8\00\00\00\00\00\00\00\00\00\00\00\00\00\00@8\00\00\00\00\00\00"
+Algae Color Range = "@[ ¯À\00\00\00@cWà\00\00\00@>¹\0Fkó© @l]\1D°\00\00\00@J\1DM\1BÂP0@oà\00\00\00\00\00"
 Main = "\00\00\00\00"
 Ball Diameter (in) = "@0\00\00\00\00\00\00"
 FOV = "@T@\00\00\00\00\00"
