--- a/2020 Vision/Config/cam4.ini
+++ b/2020 Vision/Config/cam4.ini
@@ -1,11 +1,11 @@
 [cam4]
-Brightness = "\00\00\007"
-Exposure = "\00\00\00*"
+Brightness = "\00\00\00$"
+Exposure = "\00\00\00\16"
 VideoMode = "\00\0E"
 White Balance = "\00\00"
-Saturation = "\00\00\00\15"
-Hue = "\00\00\00\11"
-Gamma = "\00\00\00\0F"
-Contrast = "\00\00\00\1D"
-Sharpness = "\00\00\00\10"
-Gain = "\00\00\00\11"
+Saturation = "\00\00\00\01"
+Hue = "\00\00\00\01"
+Gamma = "\00\00\00\01"
+Contrast = "\00\00\00\01"
+Sharpness = "\00\00\00\01"
+Gain = "\00\00\00\01"
