--- a/2020 Vision/Config/Coral.ini
+++ b/2020 Vision/Config/Coral.ini
@@ -4,5 +4,5 @@ Main = "\00\00\00\00"
 Ball Diameter (in) = "@0\00\00\00\00\00\00"
 FOV = "@Q \00\00\00\00\00"
 Score Threshold % = "@T\00\00\00\00\00\00"
-Camera Name = "\00\00\00\04cam1"
-Coral Color Range = "@Vüµş'ª\0D@0—"O'\\@SøJ\06+.D@aªhŞ\12‹@kD=¯Î¦@oà\00\00\00\00\00"
+Camera Name = "\00\00\00\04cam2"
+Coral Color Range = "@Cf	à\00\00\00@h¿ÙH\00\00\00\00\00\00\00\00\00\00\00@a\04°P\00\00\00@jm\14à\00\00\00@oà\00\00\00\00\00"
