--- a/2020 Vision/Config/cam4.ini
+++ b/2020 Vision/Config/cam4.ini
@@ -1,11 +1,11 @@
 [cam4]
-Brightness = "\00\00\00$"
-Exposure = "\00\00\00\16"
-VideoMode = "\00\0E"
-White Balance = "\00\00"
-Saturation = "\00\00\00\01"
-Hue = "\00\00\00\01"
-Gamma = "\00\00\00\01"
-Contrast = "\00\00\00\01"
+Brightness = "\00\00\00\01"
+Exposure = "\00\00\00c"
+VideoMode = "\00\02"
+White Balance = "\00\05"
+Saturation = "\00\00\000"
+Hue = "\00\00\002"
+Gamma = "\00\00\00\15"
+Contrast = "\00\00\00\02"
 Sharpness = "\00\00\00\01"
-Gain = "\00\00\00\01"
+Gain = "\00\00\00\12"
