Added NT Tables and verified working
- Added NT tables and verified it worked

--- a/2020 Vision/Config/Coral.ini
+++ b/2020 Vision/Config/Coral.ini
@@ -6,3 +6,4 @@ FOV = "@Q \00\00\00\00\00"
 Score Threshold % = "@T\00\00\00\00\00\00"
 Camera Name = "\00\00\00\04cam2"
 Coral Color Range = "@Cf	à\00\00\00@h¿ÙH\00\00\00\00\00\00\00\00\00\00\00@a\04°P\00\00\00@jm\14à\00\00\00@oà\00\00\00\00\00"
+Robot Calibration Cluster = "@A@\00\00\00\00\00@<LÌÌÌÌÍ?îE¡ÊÀƒ\12@\1A\00\00\00\00\00\00@#€\00\00\00\00\00"
