Updated the Vision Code to include NT connected

--- a/2020 Vision/Config/cam4.ini
+++ b/2020 Vision/Config/cam4.ini
@@ -1,6 +1,6 @@
 [cam4]
 Brightness = "\00\00\00\01"
-Exposure = "\00\00\00c"
+Exposure = "\00\00\00d"
 VideoMode = "\00\02"
 White Balance = "\00\05"
 Saturation = "\00\00\000"
