--- a/2020 Vision/Config/Ball.ini
+++ b/2020 Vision/Config/Ball.ini
@@ -1,7 +1,7 @@
 [Info]
-Algae Color Range = "@[ ¯À\00\00\00@cWà\00\00\00@>¹\0Fkó© @l]\1D°\00\00\00@J\1DM\1BÂP0@oà\00\00\00\00\00"
+Algae Color Range = "@[Ãc\00\00\00\00\00\00\00\00\00\00\00\00@S3©£xJ\06@oà\00\00\00\00\00@Záí~u4p@n¹\0Fkó©¤"
 Main = "\00\00\00\00"
 Ball Diameter (in) = "@0\00\00\00\00\00\00"
 FOV = "@T@\00\00\00\00\00"
 Score Threshold % = "@T\00\00\00\00\00\00"
-Camera Name = "\00\00\00\04cam2"
+Camera Name = "\00\00\00\04cam4"
