--- a/2020 Vision/Config/Vision Setup.ini
+++ b/2020 Vision/Config/Vision Setup.ini
@@ -1,5 +1,5 @@
 [Setup]
-TEAM = "\00\00\04\11"
+TEAM = "\00\00\00ç"
 Compression = "\00\00\02X"
 Video Compression = "\00\00\00\1A"
 Video Compression (%) = "\00\00\00\1F"
