Added the image stran to the dashboard back into the vision computer.

--- a/2020 Vision/Config/cam1.ini
+++ b/2020 Vision/Config/cam1.ini
@@ -1,6 +1,6 @@
 [cam1]
 Brightness = "\00\00\00\1B"
-Exposure = "\00\00\00\0B"
+Exposure = "\00\00\00\05"
 White Balance = "\00\01"
 VideoMode = "\00\0A"
 Contrast = "\00\00\00\07"
