--- a/2020 Vision/Config/Coral.ini
+++ b/2020 Vision/Config/Coral.ini
@@ -5,5 +5,5 @@ Ball Diameter (in) = "@0\00\00\00\00\00\00"
 FOV = "@Q \00\00\00\00\00"
 Score Threshold % = "@T\00\00\00\00\00\00"
 Camera Name = "\00\00\00\04cam1"
-Coral Color Range = "@[lª@\00\00\00@W¨ª@\00\00\00\00\00\00\00\00\00\00\00@lk.C⁄¸Í@k¶ç·(\18≠@o‡\00\00\00\00\00"
+Coral Color Range = "@l‡\00\00\00\00\00@jl;(N{÷\00\00\00\00\00\00\00\00@o‡\00\00\00\00\00@mí\1E◊ÁSG@o‡\00\00\00\00\00"
 Robot Calibration Cluster = "@A@\00\00\00\00\00@<LÃÃÃÃÕ@D\00\00\00\00\00\00@:Ä\00\00\00\00\00@*\00\00\00\00\00\00@#Ä\00\00\00\00\00@$\00\00\00\00\00\00"
