--- a/2020 Vision/Config/Coral.ini
+++ b/2020 Vision/Config/Coral.ini
@@ -5,5 +5,5 @@ Ball Diameter (in) = "@0\00\00\00\00\00\00"
 FOV = "@Q \00\00\00\00\00"
 Score Threshold % = "@T\00\00\00\00\00\00"
 Camera Name = "\00\00\00\04cam1"
-Coral Color Range = "@là\00\00\00\00\00@jl;(N{Ö\00\00\00\00\00\00\00\00@oà\00\00\00\00\00@m’\1E×çSG@oà\00\00\00\00\00"
-Robot Calibration Cluster = "@A@\00\00\00\00\00@<LÌÌÌÌÍ@D\00\00\00\00\00\00@:€\00\00\00\00\00@*\00\00\00\00\00\00@#€\00\00\00\00\00@$\00\00\00\00\00\00"
+Coral Color Range = "@oà\00\00\00\00\00@i\00\00\00\00\00\00\00\00\00\00\00\00\00\00@oà\00\00\00\00\00@f¨{_M\1C@oà\00\00\00\00\00"
+Robot Calibration Cluster = "@A@\00\00\00\00\00@<LÌÌÌÌÍ@J@\00\00\00\00\00@Ps33333@*\00\00\00\00\00\00\00\00\00\00\00\00\00\00@$\00\00\00\00\00\00"
