--- a/2020 Vision/Config/cam1.ini
+++ b/2020 Vision/Config/cam1.ini
@@ -1,11 +1,11 @@
 [cam1]
-Brightness = "\00\00\00\1B"
-Exposure = "\00\00\00\05"
+Brightness = "\00\00\00\07"
+Exposure = "\00\00\00\02"
 White Balance = "\00\01"
-VideoMode = "\00\0A"
-Contrast = "\00\00\00\07"
-Gain = "\00\00\002"
-Sharpness = "\00\00\002"
+VideoMode = "\00\14"
+Contrast = "\00\00\00\1D"
+Gain = "\00\00\00["
+Sharpness = "\00\00\00\06"
 Gamma = "\00\00\002"
 Hue = "\00\00\002"
 Saturation = "\00\00\002"
