Made it so we have one April tag and one ball camera

--- a/2020 Vision/Config/Ball.ini
+++ b/2020 Vision/Config/Ball.ini
@@ -1,7 +1,7 @@
 [Info]
-Algae Color Range = "@[Ãc\00\00\00\00\00\00\00\00\00\00\00\00@S3©£xJ\06@oà\00\00\00\00\00@Záí~u4p@n¹\0Fkó©¤"
+Algae Color Range = "@[ºÏ€\00\00\00@cÝgÀ\00\00\00@M®´\00\00\00\00@Z×Z\00\00\00\00@PZ+À\00\00\00@kŸã \00\00\00"
 Main = "\00\00\00\00"
 Ball Diameter (in) = "@0\00\00\00\00\00\00"
 FOV = "@T@\00\00\00\00\00"
 Score Threshold % = "@T\00\00\00\00\00\00"
-Camera Name = "\00\00\00\04cam1"
+Camera Name = "\00\00\00\04cam2"
