Got the UDP working with the cameras
- UDP is working
- Made the calibration for the ball work

--- a/2020 Vision/Config/Vision Setup.ini
+++ b/2020 Vision/Config/Vision Setup.ini
@@ -3,3 +3,4 @@ TEAM = "\00\00\00ç"
 Compression = "\00\00\02X"
 Video Compression = "\00\00\00\1A"
 Video Compression (%) = "\00\00\00\00"
+Vision Battery Power (%) = "d"
