--- a/2020 Vision/Config/Ball.ini
+++ b/2020 Vision/Config/Ball.ini
@@ -4,4 +4,5 @@ Main = "\00\00\00\00"
 Ball Diameter (in) = "@0\00\00\00\00\00\00"
 FOV = "@T@\00\00\00\00\00"
 Score Threshold % = "@T\00\00\00\00\00\00"
-Camera Name = "\00\00\00\04cam2"
+Camera Name = "\00\00\00\04cam1"
+Color Range = "\00\00\00\00\00\00\00m\00\00\00\00\00\00\00ù\00\00\00\00\00\00\001\00\00\00\00\00\00\00a\00\00\00\00\00\00\00W\00\00\00\00\00\00\00á"
