Just doing some more cleaning.
I also made it so the config file for the camera uses the serial umber now.

--- a/2020 Vision/Config/81CDB0C3_FD876EB9_Setup.ini
+++ b/2020 Vision/Config/81CDB0C3_FD876EB9_Setup.ini
@@ -1,6 +1,6 @@
-[cam3]
-Brightness = "\00\00\007"
-Exposure = "\00\00\00F"
+[81CDB0C3_FD876EB9]
+Brightness = "\00\00\006"
+Exposure = "\00\00\002"
 VideoMode = "\00\0E"
 White Balance = "\00\06"
 Saturation = "\00\00\00\01"
