--- a/2020 Vision/Config/BF1A9431_B397C2A_Setup.ini
+++ b/2020 Vision/Config/BF1A9431_B397C2A_Setup.ini
@@ -1,10 +1,10 @@
 [BF1A9431_B397C2A]
-Brightness = "\00\00\002"
-Exposure = "\00\00\00\01"
-VideoMode = "\00\03"
+Brightness = "\00\00\00\19"
+Exposure = "\00\00\00\02"
+VideoMode = "\00\01"
 White Balance = "\00\01"
 Saturation = "\00\00\00\01"
-Hue = "\00\00\002"
+Hue = "\00\00\00\01"
 Gamma = "\00\00\00\01"
 Contrast = "\00\00\00\01"
 Sharpness = "\00\00\00\01"
