Added a new pose measurement.
I made a new pose measurement that seems to work much better than the old one.

--- a/2020 Vision/Config/BF1A9431_B397C2A_Setup.ini
+++ b/2020 Vision/Config/BF1A9431_B397C2A_Setup.ini
@@ -1,5 +1,5 @@
 [BF1A9431_B397C2A]
-Brightness = "\00\00\00\19"
+Brightness = "\00\00\007"
 Exposure = "\00\00\00\02"
 VideoMode = "\00\01"
 White Balance = "\00\01"
