--- a/2020 Vision/Config/Airtag1.ini
+++ b/2020 Vision/Config/Airtag1.ini
@@ -1,6 +1,6 @@
 [Info]
 Main = "\00\00\00\00"
-Robot Calibration Cluster = "@#\00\00\00\00\00\00@\04\00\00\00\00\00\00@JÀ\00\00\00\00\00@W\00\00\00\00\00\00@\1A\00\00\00\00\00\00\00\00\00\00\00\00\00\00@$\00\00\00\00\00\00@\11=Çï\17zp@\00\00\00\00\00\00\00"
+Robot Calibration Cluster = "?ð\00\00\00\00\00\00?ð\00\00\00\00\00\00@D\00\00\00\00\00\00@K€\00\00\00\00\00@\1A\00\00\00\00\00\00@I\00\00\00\00\00\00?ð\00\00\00\00\00\00\00\00\00\00\00\00\00\00"
 FOV = "@Q \00\00\00\00\00"
 Camera Name = "\00\00\00\04cam6"
 Use Interpolator = "\00"
