Updated the code to make it faster again.
- Removed unused code int he pose measurements.
- Made the pose measurements match for the fast code as well as the NI provided code.
- Moved the extract intensity to the camera loop.

--- a/2020 Vision/Config/Airtag1.ini
+++ b/2020 Vision/Config/Airtag1.ini
@@ -1,11 +1,11 @@
 [Info]
 Main = "\00\00\00\00"
-Robot Calibration Cluster = "?ð\00\00\00\00\00\00?ð\00\00\00\00\00\00@D\00\00\00\00\00\00@K€\00\00\00\00\00@\1A\00\00\00\00\00\00@I\00\00\00\00\00\00@\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00"
+Robot Calibration Cluster = "?ð\00\00\00\00\00\00?ð\00\00\00\00\00\00@D\00\00\00\00\00\00@K€\00\00\00\00\00@\1A\00\00\00\00\00\00@I\00\00\00\00\00\00"
 FOV = "@Q \00\00\00\00\00"
 Camera Name = "\00\00\00\04cam6"
 Use Interpolator = "\00"
 Match Options = "\01\01\00\00\00\00\02\00\00\00\00À9\00\00\00\00\00\00@9\00\00\00\00\00\00\00\00\00\01@9\00\00\00\00\00\00@i\00\00\00\00\00\00"
-Minimum match score = "@Y\00\00\00\00\00\00"
-Max Rect Size (pix) = "@’À\00\00\00\00\00"
-Min Rect Size (pix) = "@I\00\00\00\00\00\00"
-Curve Parameters = "\00\00\00\00\00\00\00\0A\00\00\00\01\00\00\002\00\00\00P\00\00\00P\00\00\00\0A\01\00"
+Minimum match score = "@@\00\00\00\00\00"
+Max Rect Size (pix) = "@Çp\00\00\00\00\00"
+Min Rect Size (pix) = "@$\00\00\00\00\00\00"
+Curve Parameters = "\00\00\00\00\00\00\00–\00\00\00\01\00\00\002\00\00\00d\00\00\00d\00\00\00\0A\01\00"
