--- a/2020 Vision/Config/cam1.ini
+++ b/2020 Vision/Config/cam1.ini
@@ -1,3 +1,3 @@
 [Info]
-Robot Calibration Cluster = "@#\00\00\00\00\00\00@\04\00\00\00\00\00\00@:€\00\00\00\00\00@Q \00\00\00\00\00@$\00\00\00\00\00\00@\1A\00\00\00\00\00\00"
+Robot Calibration Cluster = "@#\00\00\00\00\00\00@\04\00\00\00\00\00\00@A€\00\00\00\00\00@P\00\00\00\00\00\00@$\00\00\00\00\00\00@\1A\00\00\00\00\00\00"
 decimate = "@\10\00\00\00\00\00\00"
