Change how the camera loop operates.

--- a/2020 Vision/Config/F9EA12C3_C0C7A3F5_Default.ini
+++ b/2020 Vision/Config/F9EA12C3_C0C7A3F5_Default.ini
@@ -1,5 +1,5 @@
 [F9EA12C3_C0C7A3F5]
-Brightness = "\00\00\00\0F"
+Brightness = "\00\00\00."
 Exposure = "?ø‰Ø‰Ù"
 VideoMode = "\00\14"
 White Balance = "\00\06"
