Still working on getting the camera to save an open setting correctly.

--- a/2020 Vision/Config/7572F6FD_D640B575_Default.ini
+++ b/2020 Vision/Config/7572F6FD_D640B575_Default.ini
@@ -1,5 +1,5 @@
-[F9EA12C3_C0C7A3F5]
-Exposure = "?ø‰Ø‰Ù"
+[7572F6FD_D640B575]
+Exposure = "@Hşoæşoç"
 Brightness = "\00\00\00."
 Gain = "\00\00\00d"
 Contrast = "\00\00\002"
