--- a/2020 Vision/Config/7572F6FD_D640B575_Setup.ini
+++ b/2020 Vision/Config/7572F6FD_D640B575_Setup.ini
@@ -1,6 +1,6 @@
-[F9EA12C3_C0C7A3F5]
-Exposure = "?ø‰Ø‰Ù"
-Brightness = "\00\00\00."
+[7572F6FD_D640B575]
+Exposure = "@Hşoæşoç"
+Brightness = "\00\00\00\0E"
 Gain = "\00\00\00d"
 Contrast = "\00\00\002"
 Sharpness = "\00\00\002"
