--- a/2020 Vision/Config/F9EA12C3_C0C7A3F5_Setup.ini
+++ b/2020 Vision/Config/F9EA12C3_C0C7A3F5_Setup.ini
@@ -1,11 +1,11 @@
 [F9EA12C3_C0C7A3F5]
-Brightness = "\00\00\00\0F"
 Exposure = "?ø‰Ø‰Ù"
-VideoMode = "\00\14"
-White Balance = "\00\06"
-Saturation = "\00\00\00*"
-Hue = "\00\00\00d"
-Gamma = "\00\00\00d"
+Brightness = "\00\00\00."
+Gain = "\00\00\00d"
 Contrast = "\00\00\002"
 Sharpness = "\00\00\002"
-Gain = "\00\00\00d"
+Gamma = "\00\00\00d"
+Hue = "\00\00\00d"
+Saturation = "\00\00\00*"
+White Balance = "\00\06"
+VideoMode = "\00\14"
