--- a/2020 Vision/Config/7572F6FD_D640B575.ini
+++ b/2020 Vision/Config/7572F6FD_D640B575.ini
@@ -1,4 +1,3 @@
 [Info]
-Main = "\00\00\00\00"
 Robot Calibration Cluster = "@#\00\00\00\00\00\00@\04\00\00\00\00\00\00@:€\00\00\00\00\00@Q \00\00\00\00\00@$\00\00\00\00\00\00@\1A\00\00\00\00\00\00"
-Camera Name = "\00\00\00\04cam6"
+decimate = "@\10\00\00\00\00\00\00"
