--- a/2020 Vision/Config/E03B056E_C031F981_Setup.ini
+++ b/2020 Vision/Config/E03B056E_C031F981_Setup.ini
@@ -1,11 +1,11 @@
 [E03B056E_C031F981]
-Brightness = "\00\00\002"
-Exposure = "\00\00\00\03"
-VideoMode = "\00\01"
-White Balance = "\00\01"
-Saturation = "\00\00\00\01"
+Exposure = "?çrî]Ë¹w"
+Brightness = "\00\00\00\04"
+Gain = "\00\00\00\00"
+Contrast = "\00\00\00\00"
+Sharpness = "\00\00\00\00"
+Gamma = "\00\00\00\00"
 Hue = "\00\00\002"
-Gamma = "\00\00\00\01"
-Contrast = "\00\00\00\01"
-Sharpness = "\00\00\00\01"
-Gain = "\00\00\00\01"
+Saturation = "\00\00\00\00"
+White Balance = "\00\01"
+VideoMode = "\00\01"
